**0.4.1.3**

- Improve detection of .NET to look for #Regions and ignore them when parsing

**0.4.1.2**

- Fixed lower case "then" in an if
- Fixed "reset" not being a reserved keyword
- Fixed parsing of Declare PtrSafe
- Improved language detection to warn if invalid file is being converted
- Fixed parsing issue with trailing colon in else statement (**"Else:"**)
- Improved **RecordSet** parsing and conversion
- Fixed parsing issue with brackets only around an If condition **If(A=1) Then ...**
- Fixed parsing issue with explicit call with parameters **Call Something 10**
- Added **progress bar** to online conversion to estimate how long it should take
- Added a better check for some file types **(VBP, C# etc)** and warn about these

**0.4.1.1**

- Implemented new "Smart" option for select variables. Tries to guess best approach.
- Support for the weird **Then Else** construct (If A Then Else B)
- Fixed parsing bug for **Sub/Function definition** all on one line
- Fixed parsing bug for **Do/While** all on one line
- Fixed parsing of **date and time literals**
- Fixed parsing issue of **space between formal parameter list and object** reference
- Fixed parsing issue with comment on **#End If** line of directive

**0.4.1**

- Made available through **pip**
- Reworked the **line continuation** logic so should be much less susceptible to failing
- Fixed issue with **highlighting the incorrect error** line when the error was on a continuation line
- Fixed issue with **<> not being converted to !=** in comparison

**0.4.0.5**

- Added **Paste** button to quickly insert VB into the window
- Fixed parsing error if a **label named "Loop<someting>"** was present in a Do .. Loop
- Added detection for **Decimal** floats
- Fixed parsing error when Dim statement had spaces before "," (eg **Dim A , B**)
- Fixed parsing issue with **line continuation with a With** and the With variable was the first item on a line
- Fixed parsing of **Enum's with multiple items** per line